--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <div id = "Drawing-Room" class="Switch">
     <div id="dr_sw" class="DRSWITCH">
       <H2>Drawing room Switch Board</H2>
-      <div class="Dsw1" onclick="toggleSwitch('ltd1s','DSW1')">
+      <div class="Dsw1" onclick="toggleSwitch('ltd1s','DRW1')">
         
       <img id="ltd1s" class="swimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
 
@@ -318,6 +318,300 @@
         </div>
         </div>
 </div>
+<!---------------------------------------------------------------DNGL-->
+<div id="DNG-L" class="Switch">
+  <div id="dngl_sw" class="dnglswitch">
+        <H2>Dining left Switch Board</H2>
+        <div class="dnglsw1" onclick="toggleSwitch('ltdngl1s','DNGLSW1')">        
+        <img id="ltdngl1s" class="dnglswimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="DNGLl1" >
+          SOL1
+        <img id="ltdngl1" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+          </div>
+      </div>
+        <div class="dnglsw2" onclick="toggleSwitch('ltdngl2s','DNGLSW2')">     
+          <img id="ltdngl2s" class="dnglswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+          <div class="DNGLl2">
+            SOL2
+            <img id="ltdngl2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+            </div>
+        </div>
+          <div class="dnglsw3" onclick="toggleSwitch('ltdngl3s','DNGLSW3')">        
+          <img id="ltdngl3s" class="dnglswimg3" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+          <div class="DNGLl3">
+            SOL3
+          <img id="ltdngl3" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+        </div>
+        </div>
+      <div class="dnglsw4" onclick="toggleSwitch('ltdngl4s','DNGLSW4')">     
+        <img id="ltdngl4s" class="dnglswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+        <div class="DNGLl4">
+          SOL4
+          <img id="ltdngl4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+        <div class="dnglsw5" onclick="toggleSwitch('ltdngl5s','DNGLSW5')"> 
+        <img id="ltdngl5s" class="dnglswimg5" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="DNGLl5">
+          SOL5
+          <img id="ltdngl5" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+    <div class="dnglsw6" onclick="toggleSwitch('ltdngl6s','DNGLSW6')"> 
+      <img id="ltdngl6s" class="dnglswimg6" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+      <div class="DNGLl6">
+        SOL6
+        <img id="ltdngl6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+        </div> 
+          </div>
+          </div>
+  </div>
+<!------------------------------------------------------------DNGL-->
+<!--------------------------------------------------------PND------>
+<div id="PND" class="Switch">
+  <div id="pnd_sw" class="pndswitch">
+        <H2>Pond side Switch Board</H2>
+        <div class="pndsw1" onclick="toggleSwitch('ltpnd1s','PNDSW1')">        
+        <img id="ltpnd1s" class="pndswimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="PNDl1" >
+          SOL1
+        <img id="ltpnd1" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+          </div>
+      </div>
+        <div class="pndsw2" onclick="toggleSwitch('ltpnd2s','PNDSW2')">     
+          <img id="ltpnd2s" class="pndswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+          <div class="PNDl2">
+            SOL2
+            <img id="ltpnd2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+            </div>
+        </div>
+          <div class="pndsw3" onclick="toggleSwitch('ltpnd3s','PNDSW3')">        
+          <img id="ltpnd3s" class="pndswimg3" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+          <div class="PNDl3">
+            SOL3
+          <img id="ltpnd3" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+        </div>
+        </div>
+      <div class="pndsw4" onclick="toggleSwitch('ltpnd4s','PNDSW4')">     
+        <img id="ltpnd4s" class="pndswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+        <div class="PNDl4">
+          SOL4
+          <img id="ltpnd4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+        <div class="pndsw5" onclick="toggleSwitch('ltpnd5s','PNDSW5')"> 
+        <img id="ltpnd5s" class="pndswimg5" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="PNDl5">
+          SOL5
+          <img id="ltpnd5" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+    <div class="pndsw6" onclick="toggleSwitch('ltpnd6s','PNDSW6')"> 
+      <img id="ltpnd6s" class="pndswimg6" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+      <div class="PNDl6">
+        SOL6
+        <img id="ltpnd6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+        </div> 
+          </div>
+          </div>
+  </div>
+<!-------------------------------------------------------------PND-->
+<div id="DNG-R" class="Switch">
+  <div id="dngr_sw" class="dngrswitch">
+        <H2>Dining Right Switch Board</H2>
+        <div class="dngrsw1" onclick="toggleSwitch('ltdngr1s','DNGRSW1')">        
+        <img id="ltdngr1s" class="dngrswimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="DNGRl1" >
+          SOL1
+        <img id="ltdngr1" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+          </div>
+      </div>
+        <div class="dngrsw2" onclick="toggleSwitch('ltdngr2s','DNGRSW2')">     
+          <img id="ltdngr2s" class="dngrswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+          <div class="DNGRl2">
+            SOL2
+            <img id="ltdngr2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+            </div>
+        </div>
+          <div class="dngrsw3" onclick="toggleSwitch('ltdngr3s','DNGRSW3')">        
+          <img id="ltdngr3s" class="dngrswimg3" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+          <div class="DNGRl3">
+            SOL3
+          <img id="ltdngr3" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+        </div>
+        </div>
+      <div class="dngrsw4" onclick="toggleSwitch('ltdngr4s','DNGRSW4')">     
+        <img id="ltdngr4s" class="dngrswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+        <div class="DNGRl4">
+          SOL4
+          <img id="ltdngr4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+        <div class="dngrsw5" onclick="toggleSwitch('ltdngr5s','DNGRSW5')"> 
+        <img id="ltdngr5s" class="dngrswimg5" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="DNGRl5">
+          SOL5
+          <img id="ltdngr5" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+    <div class="dngrsw6" onclick="toggleSwitch('ltdngr6s','DNGRSW6')"> 
+      <img id="ltdngr6s" class="dngrswimg6" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+      <div class="DNGLl6">
+        SOL6
+        <img id="ltdngr6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+        </div> 
+          </div>
+          </div>
+  </div>
+
+<!-------------------------------------------------------------DNGR-->
+<!-------------------------------------------------------------ENTL-->
+<div id="ENTL" class="Switch">
+  <div id="entl_sw" class="entlswitch">
+        <H2>Entrance left Side</H2>
+        <div class="entlsw1" onclick="toggleSwitch('ltentl1s','ENTLSW1')">        
+        <img id="ltentl1s" class="entlswimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="ENTLl1" >
+          SOL1
+        <img id="ltentl1" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+          </div>
+      </div>
+        <div class="entlsw2" onclick="toggleSwitch('ltentl2s','ENTLSW2')">     
+          <img id="ltentl2s" class="entlswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+          <div class="ENTLl2">
+            SOL2
+            <img id="ltentl2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+            </div>
+        </div>
+          <div class="entlsw3" onclick="toggleSwitch('ltentl3s','ENTLSW3')">        
+          <img id="ltentl3s" class="entlswimg3" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+          <div class="ENTLl3">
+            SOL3
+          <img id="ltentl3" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+        </div>
+        </div>
+      <div class="entlsw4" onclick="toggleSwitch('ltentl4s','ENTLSW4')">     
+        <img id="ltentl4s" class="entlswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+        <div class="ENTLl4">
+          SOL4
+          <img id="ltentl4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+        <div class="entlsw5" onclick="toggleSwitch('ltentl5s','ENTLSW5')"> 
+        <img id="ltentl5s" class="entlswimg5" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="ENTLl5">
+          SOL5
+          <img id="ltentl5" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+    <div class="entlsw6" onclick="toggleSwitch('ltentl6s','ENTLSW6')"> 
+      <img id="ltentl6s" class="entlswimg6" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+      <div class="ENTLl6">
+        SOL6
+        <img id="ltentl6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+        </div> 
+          </div>
+          </div>
+  </div>
+
+<!--------------------------------------------------------------ENTL-->
+<div id="KHN" class="Switch">
+  <div id="khn_sw" class="khnswitch">
+        <H2>Kitchen Switch Board</H2>
+        <div class="khnsw1" onclick="toggleSwitch('ltkhn1s','KHNSW1')">        
+        <img id="ltkhn1s" class="khnswimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="KHNl1" >
+          SOL1
+        <img id="ltkhn1" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+          </div>
+      </div>
+        <div class="khnsw2" onclick="toggleSwitch('ltkhn2s','KHNSW2')">     
+          <img id="ltkhn2s" class="khnswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+          <div class="KHNl2">
+            SOL2
+            <img id="ltkhn2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+            </div>
+        </div>
+          <div class="khnsw3" onclick="toggleSwitch('ltkhn3s','KHNSW3')">        
+          <img id="ltkhn3s" class="khnswimg3" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+          <div class="KHNl3">
+            SOL3
+          <img id="ltkhn3" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+        </div>
+        </div>
+      <div class="khnsw4" onclick="toggleSwitch('ltkhn4s','KHNSW4')">     
+        <img id="ltkhn4s" class="khnswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+        <div class="KHNl4">
+          SOL4
+          <img id="ltkhn4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+        <div class="khnsw5" onclick="toggleSwitch('ltkhn5s','KHNSW5')"> 
+        <img id="ltkhn5s" class="khnswimg5" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="KHNl5">
+          SOL5
+          <img id="ltkhn5" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+    <div class="khnsw6" onclick="toggleSwitch('ltkhn6s','KHNSW6')"> 
+      <img id="ltkhn6s" class="khnswimg6" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+      <div class="KHNl6">
+        SOL6
+        <img id="ltkhn6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+        </div> 
+          </div>
+          </div>
+  </div>
+
+<!----------------------------------------------------------------SKHN-->
+<div id="LVNG" class="Switch">
+  <div id="lvng_sw" class="lvngswitch">
+        <H2>Living RoomSwitch Board</H2>
+        <div class="lvngsw1" onclick="toggleSwitch('ltlvng1s','LVNGSW1')">        
+        <img id="ltlvng1s" class="lvngswimg1" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="LVNGl1" >
+          SOL1
+        <img id="ltlvng1" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+          </div>
+      </div>
+        <div class="lvngsw2" onclick="toggleSwitch('ltlvng2s','LVNGSW2')">     
+          <img id="ltlvng2s" class="lvngswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+          <div class="LVNGl2">
+            SOL2
+            <img id="ltlvng2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+            </div>
+        </div>
+          <div class="lvngsw3" onclick="toggleSwitch('ltlvng3s','LVNGSW3')">        
+          <img id="ltlvng3s" class="lvngswimg3" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+          <div class="LVNGl3">
+            SOL3
+          <img id="ltlvng3" src="./assets/images/light_off.png" alt="swoff" width="15" height="25">
+        </div>
+        </div>
+      <div class="lvngsw4" onclick="toggleSwitch('ltlvng4s','LVNGSW4')">     
+        <img id="ltlvng4s" class="lvngswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+        <div class="LVNGl4">
+          SOL4
+          <img id="ltlvng4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+        <div class="lvngsw5" onclick="toggleSwitch('ltlvng5s','LVNGSW5')"> 
+        <img id="ltlvng5s" class="lvngswimg5" src="./assets/images/sw_off.png" alt="swoff" width="50" height="75">
+        <div class="LVNGl5">
+          SOL5
+          <img id="ltlvng5" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+          </div> 
+      </div>
+    <div class="lvngsw6" onclick="toggleSwitch('ltlvng6s','LVNGSW6')"> 
+      <img id="ltlvng6s" class="lvngswimg6" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
+      <div class="LVNGl6">
+        SOL6
+        <img id="ltlvng6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
+        </div> 
+          </div>
+          </div>
+  </div>
+<!-----------------------------------------------------------------------------------LVNG-->
 <div id="Entrance-Right" class="Switch">
     <div id="entr_sw" class="entrswitch">
     <H2>Entrance Right Switch Board</H2>
@@ -521,6 +815,24 @@
   </div> --->
 </div>
 <div id="SO-Area" class="SO_Area" onclick="showSwitch('SIT-OUT')">
+</div>
+<div id="DNGL-Area" class="DNGL_Area" onclick="showSwitch('DNG-L')">
+  
+</div>
+<div id="DNGR-Area" class="DNGR_Area" onclick="showSwitch('DNG-R')">
+  
+</div>
+
+<div id="PND-Area" class="PND_Area" onclick="showSwitch('PND')">
+  
+</div>
+<div id="ENTL-Area" class="ENTL_Area" onclick="showSwitch('ENTL')">
+  
+</div>
+<div id="KHN-Area" class="KHN_Area" onclick="showSwitch('KHN')">
+  
+</div>
+<div id="LVNG-Area" class="LVNG_Area" onclick="showSwitch('LVNG')">
   
 </div>
 <div id="ENTR-Area" class="ENTR_Area" onclick="showSwitch('Entrance-Right')">
