--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>IOT HOME</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Judson:wght@400;700&display=swap" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kalnia:wght@700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kalnia:wght@700&display=swap" />
     <link rel="stylesheet" href="index.css" />
     <script src="https://cdn.rawgit.com/Mikhus/canvas-gauges/gh-pages/download/2.1.7/all/gauge.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mqtt/4.3.7/mqtt.min.js"></script> <script type="text/javascript"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mqtt/4.3.7/mqtt.min.js"></script> <script type="text/javascript"></script> 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <scrpt type= "module" src="./firebase.js"></scrpt>
+    <script type ="module" src="./parmtr.js"></script>
+    <script type="module" src="./chart.js"></script>
+   
   </head>
   <body>
    <!-- <div class="main-container"> -->
@@ -663,7 +665,7 @@
 <!--------------------------------------------------------------------------------------MDR-->
 <div id="CHART" class="Switch">
   <div id="chr_sw" class="chrswitch">
-        <H2>Master Bed Room</H2>
+        <H2>VA chart </H2>
         <canvas id="myChart" width="340" height="180"></canvas>
 
  </div>
@@ -897,9 +899,9 @@
 <div id="plan" class="pln">
 
   <center> <img id="planimg" src="./assets/images/Electrical.png" alt="start OFF" width="850" height="800"></center>
-  <div id="setng" class="setng">
+  <!--<div id="setng" class="setng">
 <img class="setngimg"src="./assets/images/icons8-settings-48.png" width ="60" height="60" onclick="showSwitch('setting')">
-  </div>
+  </div> -->
   <div id="attn_DR" class="attention"></div>
   <div id="attn_SO" class="attention"></div>
   <div id="attn_ENTR" class="attention"></div>
@@ -945,11 +947,11 @@
   
 </div>
 <div id="BDR-Area" class="BDR_Area" onclick="showSwitch('BDR')">
-  
 </div>
+<!---
 <div id="CHRT-Area" class="CHRT_Area" onclick="showSwitch('CHART')">
   
-</div>
+</div> --->
 <div id="ENTR-Area" class="ENTR_Area" onclick="showSwitch('Entrance-Right')">
   
 </div>
@@ -973,11 +975,12 @@
 <div id="swdtls" class="swdetail">
   <div class="attnp">
   <H2>ATTENTION! </H2>
-<img class="attnimg" src="./assets/images/wifi_switch_mbd.png" alt="start OFF" width="40" height="40" > Click WiFi icons in plan to CNTRL SWITCHES
+<img class="attnimg" src="./assets/images/switch_wifi_t_r.png" alt="start OFF" width="40" height="40" > Click WiFi icons in FLR PLAN to CNTRL SWITCHES
 <!--<center> <img id="planimg" src="./assets/images/iot colors_new.png" alt="start OFF" width="280" height="225"></center> -->
 <br>
-<img class="attnimg1" src="./assets/images/icons8-settings-48.png" alt="start OFF" width="40" height="40" > Click Set icon in plan for MQTT Topic setting
-
+<img class="attnimg1" src="./assets/images/icons8-settings-48.png" alt="start OFF" width="40" height="40" onclick="showSwitch('setting')"> Click GEAR icon in ATTENTION! for MQTT setting
+<br>
+<img class="attnimg2" src="./assets/images/chart.png" alt="start OFF" width="40" height="40"onclick="showSwitch('CHART')">Click CHART icon in ATTENTION ! to get  VI VHART
 </div>
 <div class="mq-head"> <center><h3> MQTT JSON</h3></center></div>
   <div id="mqtt-topic" class="mq-stat"> 
@@ -1008,8 +1011,11 @@
 
 
     
-
+    
     <script src="script.js"></script>
+   <!--- <scrpt type= "module" src="./firebase.js"></scrpt>
+    <script type="module" src="./chart.js"></script>
+    <script type ="module" src="./parmtr.js"></script> -->
   
   </body>
 </html>
