--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 <!--------------------------------------------------------------------------------------MDR-->
 <div id="CHART" class="Switch">
   <div id="chr_sw" class="chrswitch">
-        <H2>VA chart </H2>
+        <H2>TEMP Vs HUM chart </H2>
         <canvas id="myChart" width="340" height="180"></canvas>
 
  </div>
