--- a/index.html
+++ b/index.html
@@ -851,6 +851,7 @@
         
       </form>
       <button id= "loadtopic" class ="topicload">Load</button>
+      <button id="exitLoadtopic" class="topicExit">Exit</button>
       </div>
 
     </div>
